Fix Reset button to make it visible on laptop

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -139,6 +139,8 @@ cursor: pointer;
     margin-left: auto;
     margin-right: auto;
     padding: 1%;
+    /* To make Reset game visible on laptop */
+    margin-top: 0;
 }
 
 /* Hands */
@@ -329,6 +331,10 @@ transform: scaleY(-1);
 }
 
 /* Score area */
+
+ .scores {
+     margin: 0;
+ }
 
 #player-score {
     color: #55ad7a;
